--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# temporary game files
+game-instances/
+
 # Logs
 logs
 *.log
@@ -102,7 +105,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
