--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.6.0",
+    "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.7.4"
   }
 }
