--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "hradni-hlidka-server",
   "version": "1.0.0",
   "description": "Node backend server pro hru Hradní Hlídka",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "serve": "nodemon index.js",
+    "start": "node app.js",
+    "serve": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
