--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "vite-plugin-vuetify": "^2.0.3"
   }
 }
