--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "Node backend server pro hru Hradní Hlídka",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "serve": "nodemon app.js",
+    "start": "npx tsc && node app.js",
+    "serve": "npx tsc && nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0",
     "socket.io": "^4.7.4",
     "vite-plugin-vuetify": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "typescript": "^5.4.3"
   }
 }
