--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,8 @@ dist
 .pnp.*
 /.idea/
 /hradni-hlidka-server-rsa.pem
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
