--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rollup/plugin-json": "^6.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "serverless-http": "^3.2.0",
