--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "start": "npm run build && node dist/app.js",
+    "start": "node dist/app.js",
     "serve": "npx nodemon --exec \"npx tsx\" ./app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,7 +27,7 @@
     "@rollup/plugin-typescript": "^12.1.1",
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.0",
-    "rollup": "^4.27.2",
+    "rollup": "4.28.1",
     "rollup-plugin-copy": "^3.5.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
