--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "nodemon": "^3.1.0",
     "rollup": "4.28.1",
     "rollup-plugin-copy": "^3.5.0",
+    "socket.io-client": "^4.8.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vitest": "^3.2.4"
   }
 }
